--- a/index.html
+++ b/index.html
@@ -5,11 +5,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>donate today</title>
+    <title>donate-today</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto:wght@400;700&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <section class="first-sec">
+        <div class="first-model">
+            <h1 class="first-headline">Let's Help Those Who Are<br>More In Need</h1>
 
+            <p class="first-para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, quaerat.
+                <br>Delectus saepe aliquid
+                tempore fugit omnis facere placeat repellat,
+            </p>
+            <a class="link-button" href="">Donate Now</a>
+        </div>
+    </section>
 </body>
 
 </html>
