--- a/index.html
+++ b/index.html
@@ -25,6 +25,123 @@
             <a class="link-button" href="">Donate Now</a>
         </div>
     </section>
+    <section class="section-two">
+        <h1 class="title2">Donate Today</h1>
+        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit.<br> Amet fugit autem quis
+            aperiam
+            corrupti atque
+            enim,
+            necessitatibus nisi eveniet. Corporis?</p>
+
+        <div class="card1">
+            <div class="card-amount">
+                <p class="amount">100tk</p>
+            </div>
+            <div class="card-amount">
+                <p class="amount">200tk</p>
+            </div>
+            <div class="card-amount">
+                <p class="amount">500tk</p>
+            </div>
+            <div class="card-amount">
+                <p class="amount">1000tk</p>
+            </div>
+            <div class="card-amount">
+                <p class="amount">5000tk</p>
+            </div>
+
+        </div>
+        <div>
+            <P id="short-text">Other Amount(Taka)</P><br>
+            <hr><br><br>
+            <a class="link-button" href="">Donate Now</a>
+
+        </div>
+
+    </section>
+    <div class="section-two">
+        <h1 class="title2">Our Donate Plan</h1>
+        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit.<br> Amet fugit autem quis
+            aperiam
+            corrupti atque
+            enim,
+            necessitatibus nisi eveniet. Corporis?</p>
+        <div class="large-card">
+            <div class="card-element" id="card-color1">
+                <img src="icons/food.png" alt=""><br>
+                <br>
+                <h3>Food for a family</h3><br>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum culpa deserunt similique adipisci
+                    amet reprehenderit tenetur dolore commodi ratione ipsa.</p>
+            </div>
+            <div class="card-element" id="card-color2">
+                <img src="icons/shelter.png" alt=""><br><br>
+                <h3>Shelter for a family</h3><br>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum culpa deserunt similique adipisci
+                    amet reprehenderit tenetur dolore commodi ratione ipsa.</p>
+            </div>
+            <div class="card-element" id="card-color3">
+                <img src="icons/Frame-1.png" alt=""><br><br>
+                <h3>Education for a child</h3><br>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum culpa deserunt similique adipisci
+                    amet reprehenderit tenetur dolore commodi ratione ipsa.</p>
+            </div>
+
+        </div>
+    </div>
+    <div class="section-three">
+        <div class="half-width">
+            <h1 class="title3">Their lives depend on</h1>
+            <h1 class="title3">your donation<br></h1>
+            <p class="text">Lorem ipsum dolor, sit amet consectetur adipisicing elit.<br> Perspiciatis autem at
+                aperiam
+                dolor nesciunt sunt!<br><br>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.<br> Perferendis, laborum!<br></p>
+            <a class="link-button2" href="">How to contribute?</a>
+        </div>
+        <div class="half-width">
+            <img class="images" src="images\donation6.jpg" alt="">
+        </div>
+    </div>
+    <div class="section-three">
+        <div class="half-width2">
+            <img class="images" src="images\donation7.jpg" alt="">
+        </div>
+        <div class="half-width2" id="text">
+            <h1 class="title3">They need us</h1>
+            <h1 class="title3">to survive<br></h1>
+            <p class="text">Lorem ipsum dolor, sit amet consectetur adipisicing elit.<br> Perspiciatis autem at
+                aperiam
+                dolor nesciunt sunt!<br><br>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.<br> Perferendis, laborum!<br></p>
+            <a class="link-button2" href="">How to contribute?</a>
+        </div>
+
+    </div>
+    <div class="section-two">
+        <h1 class="title2">Get My Updates</h1>
+        <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit.<br> Rem a ipsum, et recusandae
+            doloribus dolores.</p>
+        <div class="last-card">
+            <div class="rect">
+                <div class="input-sec">
+                    <div class="email">
+                        <input id="input" type="email" id="email" name="Email" placeholder="Email">
+                    </div>
+                    <div class="subscribe">
+                        <p>Subscribe</p>
+                    </div>
+
+                </div>
+            </div>
+
+        </div>
+    </div>
+    <div class="footer">
+        <h3 class="bh">Be Humble</h3>
+        <p class="last-line">I'm gonna do it</p>
+    </div>
+
 </body>
 
 </html>
