--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
                 <br>Delectus saepe aliquid
                 tempore fugit omnis facere placeat repellat,
             </p>
-            <a class="link-button" href="">Donate Now</a>
+            <a class="link-button" target="_blank"
+                href="https://mushfiqur-rahman-naim.github.io/donate-today-by-mushfiq/">Donate Now</a>
         </div>
     </section>
     <section class="section-two">
@@ -35,26 +36,34 @@
 
         <div class="card1">
             <div class="card-amount">
-                <p class="amount">100tk</p>
+                <a class="amount links" target="_blank"
+                    href="https://mushfiqur-rahman-naim.github.io/donate-today-by-mushfiq/">100tk</a>
             </div>
             <div class="card-amount">
-                <p class="amount">200tk</p>
+                <a class="amount links" target="_blank"
+                    href="https://mushfiqur-rahman-naim.github.io/donate-today-by-mushfiq/">200tk</a>
             </div>
             <div class="card-amount">
-                <p class="amount">500tk</p>
+                <a class="amount links" target="_blank"
+                    href="https://mushfiqur-rahman-naim.github.io/donate-today-by-mushfiq/">500tk</a>
             </div>
             <div class="card-amount">
-                <p class="amount">1000tk</p>
+                <a class="amount links" target="_blank"
+                    href="https://mushfiqur-rahman-naim.github.io/donate-today-by-mushfiq/">1000tk</a>
             </div>
             <div class="card-amount">
-                <p class="amount">5000tk</p>
+                <a class="amount links" target="_blank"
+                    href="https://mushfiqur-rahman-naim.github.io/donate-today-by-mushfiq/">5000tk</a>
             </div>
 
         </div>
         <div>
             <P id="short-text">Other Amount(Taka)</P><br>
+            <input id="amount-id" type="text">
             <hr><br><br>
-            <a class="link-button" href="">Donate Now</a>
+
+            <a class="link-button" target="_blank"
+                href="https://mushfiqur-rahman-naim.github.io/donate-today-by-mushfiq/">Donate Now</a>
 
         </div>
 
@@ -114,7 +123,8 @@
                 aperiam
                 dolor nesciunt sunt!<br><br>
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit.<br> Perferendis, laborum!<br></p>
-            <a class="link-button2" href="">How to contribute?</a>
+            <a class="link-button2" target="_blank"
+                href="https://mushfiqur-rahman-naim.github.io/donate-today-by-mushfiq/">How to contribute?</a>
         </div>
 
     </div>
@@ -129,7 +139,8 @@
                         <input id="input" type="email" id="email" name="Email" placeholder="Email">
                     </div>
                     <div class="subscribe">
-                        <p>Subscribe</p>
+                        <a class="links" target="_blank"
+                            href="https://mushfiqur-rahman-naim.github.io/donate-today-by-mushfiq/">Subscribe</a>
                     </div>
 
                 </div>
