--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                 <a class="amount links" target="_blank"
                     href="https://mushfiqur-rahman-naim.github.io/donate-today-by-mushfiq/">100tk</a>
             </div>
-            <div class="card-amount">
-                <a class="amount links" target="_blank"
+            <div class="card-amount card2">
+                <a class="amount links" id="card2" target="_blank"
                     href="https://mushfiqur-rahman-naim.github.io/donate-today-by-mushfiq/">200tk</a>
             </div>
             <div class="card-amount">
